package com.github.yck.pattern.structural.adapter.instanceadapter;

public interface Voltage5V {
    public int output5v();
}
